--- a/index_fixed.html
+++ b/index_fixed.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="ko">
+<html data-theme="dark" lang="ko">
 <head>
 <meta content="배당 구조(정규확률·공정배당·오버라운드)와 손실 한도/고정 비중을 빠르게 계산하고, 결과를 바탕으로 보증·인증 업체 카드를 비교해 보세요." name="description"/>
 <meta charset="utf-8"/>
@@ -1836,12 +1836,11 @@ const INSIGHTS_BY_SPORT = {
 </script>
 <link href="assets/mobile-polish.css?v=2" rel="stylesheet"/>
 <script src="/assets/js/88st-analytics.js"></script>
-<link href="/assets/88st-theme.css?v=20260212_T2" rel="stylesheet"/>
-<script defer="" src="/assets/88st-theme.js?v=20260212_T2"></script>
+<link href="/assets/88st-theme.css?v=20260212_CASINO1" rel="stylesheet"/>
 </meta><link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
 <script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
-<link href="/assets/88st-shell.css?v=20260210_LUX2" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=20260211_PREM1"></script>
+<link href="/assets/88st-shell.css?v=20260212_CASINO1" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=20260212_CASINO1"></script>
 </head>
 <body>
 <div aria-hidden="true" id="loader">
