--- a/analysis/index.html
+++ b/analysis/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="ko">
+<html data-theme="dark" lang="ko">
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
@@ -28,24 +28,21 @@
   --gold: var(--accent1);
   --gold2: var(--accent2);
 
-  --bg:#0b0b0b;
-  --panel:#121212;
-  --panel2:#0f0f0f;
---muted:#bdbdbd;
+  /* follow global theme tokens (casino-style unified) */
+  --panel2: var(--panel-2);
+  /* keep tool-specific chip surface but theme-aware */
+  --chip: color-mix(in srgb, var(--panel-2) 92%, transparent);
 
   --ok:#b7ffcf;
   --warn:#ffcf99;
   --bad:#ffb3b3;
-  --chip:#1f1f1f;
+  /* --chip moved above */
 }
 html{scroll-behavior:smooth}
 body{
   margin:0;
   font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto;
-  background:
-    radial-gradient(1200px 500px at 50% -10%, rgba(var(--accentRGB),.14), transparent 55%),
-    radial-gradient(900px 500px at 10% 20%, rgba(90,160,255,.08), transparent 60%),
-    linear-gradient(180deg, #07070a, var(--bg));
+  background: var(--bg);
   color:var(--text);
 }
 
@@ -1619,12 +1616,11 @@ a{ color:inherit; }
 }
 </script>
 <script src="/assets/js/88st-analytics.js"></script>
-<link href="/assets/88st-theme.css?v=20260212_T2" rel="stylesheet"/>
-<script defer="" src="/assets/88st-theme.js?v=20260212_T2"></script>
+<link href="/assets/88st-theme.css?v=20260212_CASINO1" rel="stylesheet"/>
 <link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
 <script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
-<link href="/assets/88st-shell.css?v=20260210_LUX2" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=20260211_PREM1"></script>
+<link href="/assets/88st-shell.css?v=20260212_CASINO1" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=20260212_CASINO1"></script>
 </head>
 <body>
 <!-- ✅ 사칭주의 팝업 (1일 1회) -->
