--- a/casino-strategy/labouchere/index.html
+++ b/casino-strategy/labouchere/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html data-theme="dark" lang="ko">
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -19,8 +19,8 @@
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
 
   <script defer src="/assets/theme-preset.js"></script>
-  <link rel="stylesheet" href="/assets/88st-shell.css?v=20260211_v22_casino1"/>
-  <script defer src="/assets/js/88st-shell.js?v=20260211_PREM1"></script>
+  <link rel="stylesheet" href="/assets/88st-shell.css?v=20260212_CASINO1"/>
+  <script defer src="/assets/js/88st-shell.js?v=20260212_CASINO1"></script>
   <link rel="stylesheet" href="/assets/88st-strategy-landing.css?v=20260211_v22_casino1"/>
 
   <script type="application/ld+json">
