--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="ko">
+<html data-theme="dark" lang="ko">
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1, viewport-fit=cover" name="viewport"/>
@@ -37,7 +37,7 @@
   --gold: var(--accent);
   --gold2: var(--accent2);
 
-  --muted:#cfcfcf;
+  /* NOTE: do not override global --muted (theme-driven) */
 
   /* logo shadow presets */
   --logo-shadow-min: drop-shadow(0 10px 22px rgba(0,0,0,.35)) drop-shadow(0 0 14px rgb(var(--accentRGB) / .10));
@@ -49,10 +49,7 @@
 html{ scroll-behavior:smooth; }
 body{
   margin:0;
-  background:
-    radial-gradient(1200px 500px at 50% -10%, rgb(var(--accentRGB) / .14), transparent 55%),
-    radial-gradient(900px 500px at 10% 20%, rgba(90,160,255,.08), transparent 60%),
-    linear-gradient(180deg, #07070a, var(--bg));
+  background: var(--bg);
   font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,system-ui;
   color:var(--text);
 }
@@ -1500,9 +1497,12 @@ body::after{
   margin-top:12px;
   padding:14px 14px 12px;
   border-radius:18px;
-  border:1px solid rgba(255,255,255,.09);
-  background: linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.025));
-  box-shadow: 0 14px 40px rgba(0,0,0,.35);
+  border:1px solid var(--panel-border);
+  background: linear-gradient(180deg,
+    color-mix(in srgb, var(--panel) 86%, transparent),
+    color-mix(in srgb, var(--panel-2) 86%, transparent)
+  );
+  box-shadow: var(--shadow-sm);
 }
 .odds-summary-row{
   display:grid;
@@ -1516,27 +1516,27 @@ body::after{
 .odds-metric{
   padding:10px 10px 8px;
   border-radius:14px;
-  border:1px solid rgba(255,255,255,.07);
-  background: rgba(0,0,0,.14);
+  border:1px solid var(--panel-border);
+  background: color-mix(in srgb, var(--panel-2) 92%, transparent);
 }
 .odds-metric-title{
   font-size:12px;
-  color:#bdbdbd;
+  color: var(--muted);
   letter-spacing:.2px;
-  font-weight:800;
+  font-weight:900;
 }
 .odds-metric-value{
   margin-top:6px;
   font-size:30px;
   line-height:1.1;
-  font-weight:950;
-  color:#f5e27a;
-  text-shadow: 0 6px 20px rgba(245,226,122,.12);
+  font-weight:1000;
+  color: var(--text);
+  text-shadow: none;
 }
 .odds-metric-sub{
   margin-top:6px;
   font-size:12px;
-  color:#9a9a9a;
+  color: var(--muted);
 }
 .odds-pills{
   display:flex;
@@ -1550,21 +1550,21 @@ body::after{
   gap:6px;
   padding:7px 10px;
   border-radius:999px;
-  border:1px solid rgba(245,226,122,.22);
-  background: rgba(245,226,122,.05);
+  border:1px solid rgba(var(--accent-rgb), .22);
+  background: rgba(var(--accent-rgb), .05);
   font-size:13px;
   font-weight:900;
-  color:#eaeaea;
+  color:var(--text);
 }
 .odds-pill .k{ color:var(--muted); font-weight:800; }
-.odds-pill .v{ color:#f5e27a; font-weight:950; text-shadow: 0 6px 18px rgba(245,226,122,.12); }
-.odds-pill.home, .odds-pill.draw, .odds-pill.away{ border-color: rgba(245,226,122,.22); }
+.odds-pill .v{ color:var(--text); font-weight:950; text-shadow: none; }
+.odds-pill.home, .odds-pill.draw, .odds-pill.away{ border-color: rgba(var(--accent-rgb), .22); }
 
 .odds-summary-cta{display:flex;justify-content:flex-start;}
 .odds-summary-note{
   margin-top:8px;
   font-size:12px;
-  color:#9a9a9a;
+  color: var(--muted);
   line-height:1.35;
 }
 
@@ -1841,12 +1841,11 @@ const INSIGHTS_BY_SPORT = {
 </script>
 <link href="assets/mobile-polish.css?v=2" rel="stylesheet"/>
 <script src="/assets/js/88st-analytics.js"></script>
-<link href="/assets/88st-theme.css?v=20260212_T2" rel="stylesheet"/>
-<script defer="" src="/assets/88st-theme.js?v=20260212_T2"></script>
+<link href="/assets/88st-theme.css?v=20260212_CASINO1" rel="stylesheet"/>
 <link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
 <script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
-</meta><link href="/assets/88st-shell.css?v=20260210_LUX2" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=20260211_PREM1"></script>
+</meta><link href="/assets/88st-shell.css?v=20260212_CASINO1" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=20260212_CASINO1"></script>
 </head>
 <body>
 <div aria-hidden="true" id="loader">
@@ -1954,12 +1953,12 @@ const INSIGHTS_BY_SPORT = {
     </div>
     <div class="odds-metric">
       <div class="odds-metric-title">전략</div>
-      <div class="odds-metric-value" style="font-size:15px;">마틴·파롤리</div>
+      <div class="odds-metric-value">마틴·파롤리</div>
       <div class="odds-metric-sub">달랑·오스카·피보·라부</div>
     </div>
     <div class="odds-metric">
       <div class="odds-metric-title">세션 운영</div>
-      <div class="odds-metric-value" style="font-size:15px;">WIN/LOSE</div>
+      <div class="odds-metric-value">WIN/LOSE</div>
       <div class="odds-metric-sub">UNDO · MDD · 회복 1승</div>
     </div>
   </div>
