--- a/ok/index.html
+++ b/ok/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html data-theme="dark" lang="ko">
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -10,8 +10,7 @@
   <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
 
-  <link rel="stylesheet" href="/assets/88st-theme.css?v=20260212_T2"/>
-  <script defer src="/assets/88st-theme.js?v=20260212_T2"></script>
+  <link rel="stylesheet" href="/assets/88st-theme.css?v=20260212_CASINO1"/>
 
   <style>
     *{box-sizing:border-box;}
@@ -100,7 +99,7 @@
     텔레그램 상담문의
   </a>
 
-  <script defer src="/assets/js/88st-shell.js?v=20260211_PREM1"></script>
+  <script defer src="/assets/js/88st-shell.js?v=20260212_CASINO1"></script>
   <script defer src="/assets/js/88st-tool-history.js?v=20260210_B5"></script>
 </body>
 </html>
