--- a/tool/fair-odds/index.html
+++ b/tool/fair-odds/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="ko">
+<html data-theme="dark" lang="ko">
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
@@ -217,13 +217,12 @@ a{ color:inherit; }
 <script src="/assets/js/88st-analytics.js"></script>
 <script defer="" src="/assets/js/vendor-teasers.js"></script>
 <link href="/assets/vendor-teasers.css?v=20260210_4" rel="stylesheet"/>
-<link href="/assets/88st-theme.css?v=20260212_T2" rel="stylesheet"/>
-<script defer="" src="/assets/88st-theme.js?v=20260212_T2"></script>
+<link href="/assets/88st-theme.css?v=20260212_CASINO1" rel="stylesheet"/>
 <link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
 <script defer="" src="/assets/js/88st-tool-history.js?v=20260210_B5"></script>
 <script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
-<link href="/assets/88st-shell.css?v=20260210_LUX2" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=20260211_PREM1"></script>
+<link href="/assets/88st-shell.css?v=20260212_CASINO1" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=20260212_CASINO1"></script>
 </head>
 <body>
 <div class="wrap">
