--- a/index_fixed.html
+++ b/index_fixed.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html data-theme="dark" lang="ko">
+<html data-theme="light" lang="ko">
 <head>
 <meta content="배당 구조(정규확률·공정배당·오버라운드)와 손실 한도/고정 비중을 빠르게 계산하고, 결과를 바탕으로 보증·인증 업체 카드를 비교해 보세요." name="description"/>
 <meta charset="utf-8"/>
@@ -26,13 +26,13 @@
 *::after{ box-sizing:border-box; }
 
 :root{
-  --bg:#0b0b0b;
-  --panel:#121212;
+  --bg:#f5f6f8;
+  --panel:rgba(255,255,255,.92);
 
   /* (THEME) 로고 색상에 맞춰 자동으로 바뀌는 포인트 컬러 */
-  --accent:#5fb2ff;
-  --accent2:#a8dcff;
-  --accentRGB: 95 178 255;
+  --accent:#d4af37;
+  --accent2:#f5e27a;
+  --accentRGB: 212 175 55;
 
   /* 기존 변수명 호환(기능 유지) */
   --gold: var(--accent);
@@ -1840,7 +1840,7 @@ const INSIGHTS_BY_SPORT = {
 </meta><link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
 <script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
 <link href="/assets/88st-shell.css?v=20260212_CASINO1" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=20260212_CASINO1"></script>
+<script defer="" src="/assets/js/88st-shell.js?v=20260212_VIP1"></script>
 </head>
 <body>
 <div aria-hidden="true" id="loader">
