--- a/landing-e/index.html
+++ b/landing-e/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-theme="dark" lang="ko">
+<html data-theme="light" lang="ko">
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -142,7 +142,7 @@
     텔레그램 상담문의
   </a>
 
-  <script defer src="/assets/js/88st-shell.js?v=20260212_CASINO1"></script>
+  <script defer src="/assets/js/88st-shell.js?v=20260212_VIP1"></script>
   <script defer src="/assets/js/88st-tool-history.js?v=20260210_B5"></script>
 </body>
 </html>
