--- a/tool/kelly/index.html
+++ b/tool/kelly/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html data-theme="dark" lang="ko">
+<html data-theme="light" lang="ko">
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
@@ -16,9 +16,9 @@
 <link href="/assets/vendor-teasers.css?v=20260210_4" rel="stylesheet"/>
 <style>
 :root{
-  --accent1:#5fb2ff; --accent2:#a8dcff; --accentRGB:95,178,255;
+  --accent1:#d4af37; --accent2:#f5e27a; --accentRGB:212,175,55;
   --gold:var(--accent1); --gold2:var(--accent2);
-  --bg:#05060b; --panel:rgba(12,14,22,.62);
+  --bg:#f5f6f8; --panel:rgba(255,255,255,.92);
   --border:rgba(255,255,255,.12); --text:rgba(255,255,255,.92); --muted:rgba(255,255,255,.62);
 }
 *{box-sizing:border-box;}
@@ -62,7 +62,7 @@ input,select{width:100%;padding:11px 12px;border-radius:14px;border:1px solid rg
 <script defer="" src="/assets/js/88st-tool-history.js?v=20260210_B5"></script>
 <script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
 <link href="/assets/88st-shell.css?v=20260212_CASINO1" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=20260212_CASINO1"></script>
+<script defer="" src="/assets/js/88st-shell.js?v=20260212_VIP1"></script>
 </head>
 <body>
 <div class="wrap">
