--- a/landing-b/index.html
+++ b/landing-b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html data-theme="dark" lang="ko">
+<html data-theme="light" lang="ko">
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
@@ -37,8 +37,8 @@
   --gold: var(--accent1);
   --gold2: var(--accent2);
 
-  --bg:#0b0b0b;
-  --panel:rgba(18,18,18,var(--glassA));
+  --bg:#f5f6f8;
+  --panel:rgba(255,255,255,.92);
 --muted:#cfcfcf;
   --line:rgba(255,255,255,.08);
 }
@@ -172,24 +172,24 @@ a{color:inherit;text-decoration:none;}
 }
 
 </style>
-<script defer="" src="../assets/theme-preset.js"></script>
+
 <style id="v13_1_theme_override">
 /* === v13.1 look unify (from main index) === */
 :root{
   /* unify accent (blue) */
-  --accent1:#5fb2ff;
-  --accent2:#a8dcff;
-  --accentRGB:95,178,255;  /* for rgba(var(--accentRGB), .xx) */
+  --accent1:#d4af37;
+  --accent2:#f5e27a;
+  --accentRGB:212,175,55;  /* for rgba(var(--accentRGB), .xx) */
   --accentText:#00121a;
   --accentOn:#00121a;
 
   /* unify tokens */
-  --bg:#05060b;
-  --panel:rgba(12,14,22,.62);
+  --bg:#f5f6f8;
+  --panel:rgba(255,255,255,.92);
   --glassA:.72;
   --glassStrongA:.86;
   --glassSoftA:.18;
-  --glassBorder:rgba(255,255,255,.10);
+  --glassBorder:rgba(18,20,28,.10);
 
   /* backward compat */
   --gold: var(--accent1);
@@ -279,7 +279,7 @@ a{ color:inherit; }
 <link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
 <script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
 <link href="/assets/88st-shell.css?v=20260212_CASINO1" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=20260212_CASINO1"></script>
+<script defer="" src="/assets/js/88st-shell.js?v=20260212_VIP1"></script>
 </head>
 <body>
 <div class="wrap">
