--- a/casino-strategy/dalembert/index.html
+++ b/casino-strategy/dalembert/index.html
@@ -19,8 +19,8 @@
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
 
 
-  <link rel="stylesheet" href="/assets/88st-shell.css?v=20260212_CASINO1"/>
-  <script defer src="/assets/js/88st-shell.js?v=20260212_VIP1"></script>
+  <link rel="stylesheet" href="/assets/88st-shell.css?v=20260212_VIP2"/>
+  <script defer src="/assets/js/88st-shell.js?v=20260212_VIP2"></script>
   <link rel="stylesheet" href="/assets/88st-strategy-landing.css?v=20260211_v22_casino1"/>
 
   <script type="application/ld+json">
