--- a/index.html
+++ b/index.html
@@ -1841,11 +1841,11 @@ const INSIGHTS_BY_SPORT = {
 </script>
 <link href="assets/mobile-polish.css?v=2" rel="stylesheet"/>
 <script src="/assets/js/88st-analytics.js"></script>
-<link href="/assets/88st-theme.css?v=20260212_CASINO1" rel="stylesheet"/>
+<link href="/assets/88st-theme.css?v=20260212_VIP2" rel="stylesheet"/>
 <link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
 <script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
-</meta><link href="/assets/88st-shell.css?v=20260212_CASINO1" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=20260212_VIP1"></script>
+</meta><link href="/assets/88st-shell.css?v=20260212_VIP2" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=20260212_VIP2"></script>
 </head>
 <body>
 <div aria-hidden="true" id="loader">
@@ -1877,11 +1877,7 @@ const INSIGHTS_BY_SPORT = {
 <!-- 메인 루트: 분석기 사용 -->
 <div class="section" id="analyzerSection">
 <div class="title"><span class="badge">MAIN</span>스포츠 배당 분석기</div>
-<div class="text">
-      배당 흐름·마진(오버·언더)·EV를 <b>초간단</b>으로 확인하는 도구입니다.
-      <span style="display:block;color:#9a9a9a;font-size:12px;margin-top:6px;">※ 도구는 참고용이며 결과를 보장하지 않습니다.</span>
-</div>
-<div class="cta-row">
+<div class=\"cta-row\">
 <a class="analyze-btn primary" data-cta="analysis" href="/analysis/">
 <span aria-hidden="true" class="icon">
 <svg fill="none" height="22" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewbox="0 0 24 24" width="22">
