--- a/landing-a/index.html
+++ b/landing-a/index.html
@@ -275,11 +275,11 @@ a{ color:inherit; }
 <script src="/assets/js/88st-analytics.js"></script>
 <script defer="" src="/assets/js/vendor-teasers.js"></script>
 <link href="/assets/vendor-teasers.css?v=20260210_4" rel="stylesheet"/>
-<link href="/assets/88st-theme.css?v=20260212_CASINO1" rel="stylesheet"/>
+<link href="/assets/88st-theme.css?v=20260212_VIP2" rel="stylesheet"/>
 <link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
 <script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
-<link href="/assets/88st-shell.css?v=20260212_CASINO1" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=20260212_VIP1"></script>
+<link href="/assets/88st-shell.css?v=20260212_VIP2" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=20260212_VIP2"></script>
 </head>
 <body>
 <div class="wrap">
