--- a/tool-casino/index.html
+++ b/tool-casino/index.html
@@ -16,11 +16,18 @@
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
 
 
-  <link rel="stylesheet" href="/assets/88st-theme.css?v=20260212_CASINO1"/>
+  <link rel="stylesheet" href="/assets/88st-theme.css?v=20260212_VIP2"/>
   <link rel="stylesheet" href="/assets/88st-casino-strategies.css?v=20260211_v22_casino1"/>
-  <link rel="stylesheet" href="/assets/88st-shell.css?v=20260212_CASINO1"/>
-  <script defer src="/assets/js/88st-shell.js?v=20260212_VIP1"></script>
+  <link rel="stylesheet" href="/assets/88st-shell.css?v=20260212_VIP2"/>
+  <script defer src="/assets/js/88st-shell.js?v=20260212_VIP2"></script>
   <script defer src="/assets/js/88st-casino-strategies.js?v=20260211_v22_casino1"></script>
+  <!-- GA4 (Casino Stream) -->
+  <script>
+    window.SITE_CONFIG = window.SITE_CONFIG || {};
+    window.SITE_CONFIG.GA4_ID = 'G-22QKSP9VGB';
+  </script>
+  <script defer src='/assets/js/88st-analytics.js'></script>
+
 
   <script type="application/ld+json">
   {
