--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <!-- ===== SEO 기본 세팅 ===== -->
 <title>88st.cloud | 스포츠 배당 분석기 · 스포츠 배당 마진 계산기 · 먹튀검증 안전놀이터 ·안전한토토사이트</title>
 <meta content="88 — 스포츠 배당 분석기와 배당 마진(오버라운드) 계산기를 무료로 제공합니다. 분석기 사용 안내와 인증 놀이터 정보를 한 곳에서 확인하세요." name="description">
+<meta name="keywords" content="스포츠 분석기, 스포츠 배당 분석기, 배당 마진 계산기, 오버라운드, EV 계산기, 공정배당, 보증사이트, 인증사이트, 먹튀검증, 카지노 전략 분석기, 미니게임 분석기"/>
 <link href="https://88st.cloud/" rel="canonical"/>
 <meta content="index,follow" name="robots"/>
 <!-- SNS 공유 -->
@@ -1841,11 +1842,11 @@ const INSIGHTS_BY_SPORT = {
 </script>
 <link href="assets/mobile-polish.css?v=2" rel="stylesheet"/>
 <script src="/assets/js/88st-analytics.js"></script>
-<link href="/assets/88st-theme.css?v=20260212_VIP2" rel="stylesheet"/>
+<link href="/assets/88st-theme.css?v=20260212_VIP3" rel="stylesheet"/>
 <link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
 <script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
-</meta><link href="/assets/88st-shell.css?v=20260212_VIP2" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=20260212_VIP2"></script>
+</meta><link href="/assets/88st-shell.css?v=20260212_VIP3" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=20260212_VIP3"></script>
 </head>
 <body>
 <div aria-hidden="true" id="loader">
@@ -1876,24 +1877,49 @@ const INSIGHTS_BY_SPORT = {
 <div class="section-wrap">
 <!-- 메인 루트: 분석기 사용 -->
 <div class="section" id="analyzerSection">
-<div class="title"><span class="badge">MAIN</span>스포츠 배당 분석기</div>
-<div class=\"cta-row\">
-<a class="analyze-btn primary" data-cta="analysis" href="/analysis/">
+<div class="title"><span class="badge">MAIN</span>분석기 바로가기</div>
+<div class="cta-row">
+<a class="analyze-btn primary" data-cta="go_sports_analysis" href="/analysis/">
 <span aria-hidden="true" class="icon">
 <svg fill="none" height="22" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewbox="0 0 24 24" width="22">
 <path d="M3 3v18h18"></path>
 <path d="M7 14l3-3 3 2 5-6"></path>
 </svg>
 </span>
-<span class="label">분석기 사용<span class="sub"> 중 · 고급 · 핸디 · 언더·오버 · EV </span></span>
+<span class="label">스포츠 분석기 이동<span class="sub"> 중·고급·핸디·언더·오버·EV</span></span>
 </a>
-<a class="analyze-btn secondary" data-cta="vendors" href="#vendorTop">
+
+<a class="analyze-btn secondary" data-cta="go_casino_strategy" href="/tool-casino/">
+  <span aria-hidden="true" class="icon">
+    <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M4 8a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V8z"/>
+      <path d="M8 12h0"/>
+      <path d="M12 12h0"/>
+      <path d="M16 12h0"/>
+    </svg>
+  </span>
+  <span class="label">카지노 전략 분석기 이동<span class="sub">마틴·파롤리·달랑·오스카·피보·라부</span></span>
+</a>
+
+<a class="analyze-btn secondary" data-cta="go_minigame_analyzer" href="/tool-minigame/">
+  <span aria-hidden="true" class="icon">
+    <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M12 3v18"/>
+      <path d="M3 12h18"/>
+      <path d="M7 7l10 10"/>
+      <path d="M17 7L7 17"/>
+    </svg>
+  </span>
+  <span class="label">미니게임 분석기 이동<span class="sub">동행 파워볼·파워볼+·키노사다리</span></span>
+</a>
+
+<a class="analyze-btn secondary" data-cta="go_verified_vendors" href="#vendors-verified">
 <span aria-hidden="true" class="icon">
 <svg fill="none" height="22" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewbox="0 0 24 24" width="22">
 <path d="M12 2l3 7 7 3-7 3-3 7-3-7-7-3 7-3 3-7z"></path>
 </svg>
 </span>
-<span class="label"> 보증 · 인증 사이트  <span class="sub">바로 가기</span></span>
+<span class="label">보증 · 인증 사이트 이동<span class="sub">인증 카드 섹션으로</span></span>
 </a>
 </div>
 
