--- a/analysis/index.html
+++ b/analysis/index.html
@@ -6,6 +6,7 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>스포츠 배당 분석기 | 88 커뮤니티</title>
 <meta content="종목(축구/농구/야구/배구/e스포츠/하키)별 배당 입력으로 승리 확률(배당 기반·추정), 오버라운드, 마진, 밸류(EV), 권장 비중(보수적 Kelly), 메인/오버언더/핸디 마진을 통합 계산하고 히스토리/비교까지 지원하는 분석기입니다. (판단 보조용)" name="description"/>
+<meta name="keywords" content="스포츠 분석기, 스포츠 배당 분석기, 배당 마진, 오버라운드, 공정확률, 공정배당, EV, 핸디캡, 언더오버"/>
 <link href="https://88st.cloud/analysis/" rel="canonical"/>
 <meta content="index,follow" name="robots"/>
 <style>
@@ -1616,11 +1617,11 @@ a{ color:inherit; }
 }
 </script>
 <script src="/assets/js/88st-analytics.js"></script>
-<link href="/assets/88st-theme.css?v=20260212_VIP2" rel="stylesheet"/>
+<link href="/assets/88st-theme.css?v=20260212_VIP3" rel="stylesheet"/>
 <link href="/assets/88st-tool-history.css?v=20260210_B5" rel="stylesheet"/>
 <script defer="" src="/assets/js/88st-history-hub.js?v=20260210_B5"></script>
-<link href="/assets/88st-shell.css?v=20260212_VIP2" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=20260212_VIP2"></script>
+<link href="/assets/88st-shell.css?v=20260212_VIP3" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=20260212_VIP3"></script>
 </head>
 <body>
 <!-- ✅ 사칭주의 팝업 (1일 1회) -->
