--- a/tool-casino/index.html
+++ b/tool-casino/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>바카라 전략 계산기 | 마틴게일·파롤리·달랑베르·오스카·피보나치·라부셰르</title>
   <meta name="description" content="바카라(PLAYER 2.00 / BANKER 1.97) 기준으로 마틴게일·파롤리·달랑베르·오스카 그라인드·피보나치·라부셰르를 스피드 버튼(WIN/LOSE)으로 즉시 계산합니다. 세션/자금관리 트래커 + 최근 5개 저장."/>
+<meta name="keywords" content="카지노 전략 분석기, 바카라 전략, 마틴게일, 파롤리, 달랑베르, 오스카 그라인드, 피보나치, 라부셰르, 세션 트래커, 배팅 계산기"/>
   <meta name="robots" content="index,follow"/>
   <link rel="canonical" href="https://88st.cloud/tool-casino/"/>
   <meta property="og:type" content="website"/>
@@ -16,10 +17,10 @@
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
 
 
-  <link rel="stylesheet" href="/assets/88st-theme.css?v=20260212_VIP2"/>
+  <link rel="stylesheet" href="/assets/88st-theme.css?v=20260212_VIP3"/>
   <link rel="stylesheet" href="/assets/88st-casino-strategies.css?v=20260211_v22_casino1"/>
-  <link rel="stylesheet" href="/assets/88st-shell.css?v=20260212_VIP2"/>
-  <script defer src="/assets/js/88st-shell.js?v=20260212_VIP2"></script>
+  <link rel="stylesheet" href="/assets/88st-shell.css?v=20260212_VIP3"/>
+  <script defer src="/assets/js/88st-shell.js?v=20260212_VIP3"></script>
   <script defer src="/assets/js/88st-casino-strategies.js?v=20260211_v22_casino1"></script>
   <!-- GA4 (Casino Stream) -->
   <script>
