--- a/tool-minigame/index.html
+++ b/tool-minigame/index.html
@@ -108,9 +108,10 @@
         <div class='mg-divider'></div>
 
         <div class='mg-btnrow'>
-          <button class='mg-btn primary' id='mgReset' type='button'>초기화</button>
+          <button class='mg-btn' id='mgReset' type='button'>초기화</button>
           <button class='mg-btn' id='mgFillFair' type='button'>공정확률로 채우기</button>
           <button class='mg-btn' id='mgSave' type='button'>저장</button>
+          <button class='mg-btn primary' id='mgAnalyze' type='button'>분석하기</button>
         </div>
       </section>
 
