--- a/casino-strategy/labouchere/index.html
+++ b/casino-strategy/labouchere/index.html
@@ -20,6 +20,7 @@
 
 
   <link rel="stylesheet" href="/assets/88st-shell.css?v=20260212_VIP3"/>
+  <link rel="stylesheet" href="/assets/88st-theme.css?v=20260212_VIP3"/>
   <script defer src="/assets/js/88st-shell.js?v=20260212_VIP3"></script>
   <link rel="stylesheet" href="/assets/88st-strategy-landing.css?v=20260211_v22_casino1"/>
 
